Code Updates to Algorithm Plugins, Analytic Schema and Analytic View  (#2001)
* Code updates to algorithm plugins

* Code updates to analytic schema

* Code updates to analytic view

* Fix code smells

* Add default case to switches